# libotr-ng-toolkit

./: .clang-format  .editorconfig  .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  toolkit.h  toolkit.h.in
src/: Makefile.am  debug.h  decode.c  decode.h  examples.txt  hello  help_functions.c  help_functions.h  helper.c  helper.h  otr_parse.c  otr_remac.c  otrng_mackey.c  otrng_modify.c  otrng_parse.c  otrng_readforge.c  otrv4_toolkit.c  parse.c  parse.h  parse_functions.c  parse_functions.h  read_otr.c  read_otr.h  readforge.c  readforge.h  readotr.c  readotr.h  sha1hmac.h  sha1mac.c
src/.deps/: hello.Po
src/test/: Makefile.am  test  test.c  test_helpers.h  test_otrng_mackey.c  test_otrng_modify.c  test_otrng_parse.c  test_otrng_readforge.c  test_otrng_remac.c  test_otrv4_parse.c  test_parse.c
src/test/.deps/: test-test.Po  test-test_toolkit_parse.Po
